# parse-checker

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: nightly.yml  release.yml  test.yml
crates/cli/: Cargo.toml
crates/cli/snapshot/: Always eventually request.mcf  Always eventually request_alt.mcf  Bounded overtaking.mcf  Correctness.mcf  Eventual access if fair.mcf  Eventual access without coorperation.mcf  Eventual access.mcf  Reachable.mcf  eventually_comm.mcf  eventually_startup.mcf  minimal_walking_distance.mcf  mutual exclusion.mcf  prop9.mcf  red_can_win.mcf  request_can_eventually_enter.mcf  rule4.mcf  rule789.mcf  starvation freemdom.mcf  white_can_win.mcf
crates/cli/src/: diff.rs  main.rs  main.rs.orig  test_examples.rs
crates/mcrl2-2024/: Cargo.toml
crates/mcrl2-2024-sys/: Cargo.toml  build.rs
crates/mcrl2-2024-sys/cpp/: print_ast.h
crates/mcrl2-2024-sys/src/: lib.rs
crates/mcrl2-2024/src/: main.rs
crates/mcrl2-sys/: Cargo.toml  build.rs
crates/mcrl2-sys/cpp/: print_ast.h
crates/mcrl2-sys/src/: lib.rs
crates/server/: Cargo.toml
crates/xtask/src/: main.rs  package.rs
examples/fixed/: Correctness.mcf
examples/incorrect/: Bounded overtaking.mcf  Correctness.mcf  eventually_comm.mcf  eventually_startup.mcf  minimal_walking_distance.mcf  mutual exclusion.mcf  prop9.mcf  red_can_win.mcf  request_can_eventually_enter.mcf  white_can_win.mcf
src/: main.rs
webpage/: index.html
