[workspace.package]
authors = ["Maurice Laveaux"]
edition = "2024"
license = "BSL-1.0"
repository = "https://github.com/mlaveaux/mCRL3.git"
rust-version = "1.85.0"
version = "0.1.0"

# Add debug information to the release binaries.
[profile.release]
debug = "full"

[workspace]
resolver = "2"
members = [
    "crates/*",
]


[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
hyper = { version = "1.6", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tokio = { version = "1.45", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http-body-util = "0.1"
duct = "1.0"

# Requires to build mCRL2
cxx = "1.0"
cxx-build = { version = "1.0", features = ["parallel"] }
cargo-emit = "0.2"