[workspace.package]
authors = ["Maurice Laveaux"]
edition = "2024"
license = "BSL-1.0"
repository = "https://github.com/mlaveaux/mCRL3.git"
rust-version = "1.85.0"
version = "1.0.0"

# Add debug information to the release binaries.
[profile.release]
debug = "full"

[workspace]
resolver = "2"
members = [
    "crates/cli",
    "crates/mcrl2-sys",
    "crates/mcrl2-2024",
    "crates/mcrl2-2024-sys",
    "crates/xtask",
]

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }

# Requires to build mCRL2
cc = "1.2"
cxx = "1.0"
cxx-build = { version = "1.0", features = ["parallel"] }
cargo-emit = "0.2"
duct = "1.0"
which = "8.0"
similar = "2.7"
console = "0.16"

test-case = "3.3"

# Own crates
mcrl2-sys = { path = "crates/mcrl2-sys" }
mcrl2-2024-sys = { path = "crates/mcrl2-2024-sys" }